[gd_scene load_steps=12 format=2]

[ext_resource path="res://MatrixEntry.tscn" type="PackedScene" id=1]
[ext_resource path="res://tilemap.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/Deck.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Hand.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Heap.gd" type="Script" id=5]
[ext_resource path="res://Scripts/ProgMatrixViewController.gd" type="Script" id=6]
[ext_resource path="res://Scripts/PlayerBoardController.gd" type="Script" id=7]
[ext_resource path="res://Scripts/ProgMatrix.gd" type="Script" id=8]
[ext_resource path="res://Scripts/PlayerBoardUI.gd" type="Script" id=9]
[ext_resource path="res://Scripts/MulliganController.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[node name="Player" type="Node2D"]
position = Vector2( 320, 0 )
z_index = 2
script = ExtResource( 7 )

[node name="PlayerBoardUI" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 105, 0, 4, 106, 0, 8, 109, 0 )
script = ExtResource( 9 )

[node name="MatrixEntry1" parent="PlayerBoardUI" instance=ExtResource( 1 )]
position = Vector2( 16, 32 )

[node name="MatrixEntry2" parent="PlayerBoardUI" instance=ExtResource( 1 )]
position = Vector2( 64, 32 )

[node name="MatrixEntry3" parent="PlayerBoardUI" instance=ExtResource( 1 )]
position = Vector2( 112, 32 )

[node name="Mulligan" type="Node2D" parent="PlayerBoardUI"]
position = Vector2( 168, 40 )
script = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="PlayerBoardUI/Mulligan"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBoardUI/Mulligan/Area2D"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="PlayerBoardUI/Mulligan"]
position = Vector2( -168, -40 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131082, 28, 0, 196618, 136, 0 )

[node name="HoverOverlay" type="TileMap" parent="PlayerBoardUI/Mulligan"]
visible = false
position = Vector2( -168, -40 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131082, 137, 0 )

[node name="Board" type="Node2D" parent="PlayerBoardUI"]
position = Vector2( 32, 128 )
z_index = 1
script = ExtResource( 6 )

[node name="RunIndicator" type="TileMap" parent="PlayerBoardUI"]
visible = false
position = Vector2( 32, 96 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 126, 0 )

[node name="PlayerBackground" type="TileMap" parent="PlayerBoardUI"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 74, 0, 1, 74, 0, 2, 74, 0, 3, 74, 0, 4, 74, 0, 5, 74, 0, 6, 74, 0, 7, 74, 0, 8, 74, 0, 9, 74, 0, 10, 74, 0, 11, 74, 0, 65536, 74, 0, 65537, 74, 0, 65538, 74, 0, 65539, 74, 0, 65540, 74, 0, 65541, 74, 0, 65542, 74, 0, 65543, 74, 0, 65544, 74, 0, 65545, 74, 0, 65546, 74, 0, 65547, 74, 0, 131072, 74, 0, 131073, 74, 0, 131074, 74, 0, 131075, 74, 0, 131076, 74, 0, 131077, 74, 0, 131078, 74, 0, 131079, 74, 0, 131080, 74, 0, 131081, 74, 0, 131082, 74, 0, 131083, 74, 0, 196608, 74, 0, 196609, 74, 0, 196610, 74, 0, 196611, 74, 0, 196612, 74, 0, 196613, 74, 0, 196614, 74, 0, 196615, 74, 0, 196616, 74, 0, 196617, 74, 0, 196618, 74, 0, 196619, 74, 0, 262144, 74, 0, 262145, 74, 0, 262146, 74, 0, 262147, 74, 0, 262148, 74, 0, 262149, 74, 0, 262150, 74, 0, 262151, 74, 0, 262152, 74, 0, 262153, 74, 0, 262154, 74, 0, 262155, 74, 0, 327680, 74, 0, 327681, 74, 0, 327682, 74, 0, 327683, 74, 0, 327684, 74, 0, 327685, 74, 0, 327686, 74, 0, 327687, 74, 0, 327688, 74, 0, 327689, 74, 0, 327690, 74, 0, 327691, 74, 0, 393216, 74, 0, 393217, 74, 0, 393218, 74, 0, 393219, 74, 0, 393220, 74, 0, 393221, 74, 0, 393222, 74, 0, 393223, 74, 0, 393224, 74, 0, 393225, 74, 0, 393226, 74, 0, 393227, 74, 0, 458752, 74, 0, 458753, 74, 0, 458754, 74, 0, 458755, 74, 0, 458756, 74, 0, 458757, 74, 0, 458758, 74, 0, 458759, 74, 0, 458760, 74, 0, 458761, 74, 0, 458762, 74, 0, 458763, 74, 0, 524288, 74, 0, 524289, 74, 0, 524290, 74, 0, 524291, 74, 0, 524292, 74, 0, 524293, 74, 0, 524294, 74, 0, 524295, 74, 0, 524296, 74, 0, 524297, 74, 0, 524298, 74, 0, 524299, 74, 0, 589824, 74, 0, 589825, 74, 0, 589826, 74, 0, 589827, 74, 0, 589828, 74, 0, 589829, 74, 0, 589830, 74, 0, 589831, 74, 0, 589832, 74, 0, 589833, 74, 0, 589834, 74, 0, 589835, 74, 0, 655360, 74, 0, 655361, 74, 0, 655362, 74, 0, 655363, 74, 0, 655364, 74, 0, 655365, 74, 0, 655366, 74, 0, 655367, 74, 0, 655368, 74, 0, 655369, 74, 0, 655370, 74, 0, 655371, 74, 0, 720896, 74, 0, 720897, 74, 0, 720898, 74, 0, 720899, 74, 0, 720900, 74, 0, 720901, 74, 0, 720902, 74, 0, 720903, 74, 0, 720904, 74, 0, 720905, 74, 0, 720906, 74, 0, 720907, 74, 0, 786432, 74, 0, 786433, 74, 0, 786434, 74, 0, 786435, 74, 0, 786436, 74, 0, 786437, 74, 0, 786438, 74, 0, 786439, 74, 0, 786440, 74, 0, 786441, 74, 0, 786442, 74, 0, 786443, 74, 0, 851968, 74, 0, 851969, 74, 0, 851970, 74, 0, 851971, 74, 0, 851972, 74, 0, 851973, 74, 0, 851974, 74, 0, 851975, 74, 0, 851976, 74, 0, 851977, 74, 0, 851978, 74, 0, 851979, 74, 0, 917504, 74, 0, 917505, 74, 0, 917506, 74, 0, 917507, 74, 0, 917508, 74, 0, 917509, 74, 0, 917510, 74, 0, 917511, 74, 0, 917512, 74, 0, 917513, 74, 0, 917514, 74, 0, 917515, 74, 0, 983040, 74, 0, 983041, 74, 0, 983042, 74, 0, 983043, 74, 0, 983044, 74, 0, 983045, 74, 0, 983046, 74, 0, 983047, 74, 0, 983048, 74, 0, 983049, 74, 0, 983050, 74, 0, 983051, 74, 0, 1048576, 74, 0, 1048577, 74, 0, 1048578, 74, 0, 1048579, 74, 0, 1048580, 74, 0, 1048581, 74, 0, 1048582, 74, 0, 1048583, 74, 0, 1048584, 74, 0, 1048585, 74, 0, 1048586, 74, 0, 1048587, 74, 0, 1114112, 74, 0, 1114113, 74, 0, 1114114, 74, 0, 1114115, 74, 0, 1114116, 74, 0, 1114117, 74, 0, 1114118, 74, 0, 1114119, 74, 0, 1114120, 74, 0, 1114121, 74, 0, 1114122, 74, 0, 1114123, 74, 0, 1179648, 74, 0, 1179649, 74, 0, 1179650, 74, 0, 1179651, 74, 0, 1179652, 74, 0, 1179653, 74, 0, 1179654, 74, 0, 1179655, 74, 0, 1179656, 74, 0, 1179657, 74, 0, 1179658, 74, 0, 1179659, 74, 0, 1245184, 74, 0, 1245185, 74, 0, 1245186, 74, 0, 1245187, 74, 0, 1245188, 74, 0, 1245189, 74, 0, 1245190, 74, 0, 1245191, 74, 0, 1245192, 74, 0, 1245193, 74, 0, 1245194, 74, 0, 1245195, 74, 0, 1310720, 74, 0, 1310721, 74, 0, 1310722, 74, 0, 1310723, 74, 0, 1310724, 74, 0, 1310725, 74, 0, 1310726, 74, 0, 1310727, 74, 0, 1310728, 74, 0, 1310729, 74, 0, 1310730, 74, 0, 1310731, 74, 0, 1376256, 74, 0, 1376257, 74, 0, 1376258, 74, 0, 1376259, 74, 0, 1376260, 74, 0, 1376261, 74, 0, 1376262, 74, 0, 1376263, 74, 0, 1376264, 74, 0, 1376265, 74, 0, 1376266, 74, 0, 1376267, 74, 0 )

[node name="NonPlayerBackground" type="TileMap" parent="PlayerBoardUI"]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 393215, 75, 0, 327680, 75, 0, 327681, 75, 0, 327682, 75, 0, 327683, 75, 0, 327684, 75, 0, 327685, 75, 0, 327686, 75, 0, 327687, 75, 0, 327688, 75, 0, 327689, 75, 0, 327690, 75, 0, 327691, 75, 0, 327692, 75, 0, 458751, 75, 0, 393216, 75, 0, 393217, 75, 0, 393218, 75, 0, 393219, 75, 0, 393220, 75, 0, 393221, 75, 0, 393222, 75, 0, 393223, 75, 0, 393224, 75, 0, 393225, 75, 0, 393226, 75, 0, 393227, 75, 0, 393228, 75, 0, 524287, 75, 0, 458752, 75, 0, 458753, 75, 0, 458754, 75, 0, 458755, 75, 0, 458756, 75, 0, 458757, 75, 0, 458758, 75, 0, 458759, 75, 0, 458760, 75, 0, 458761, 75, 0, 458762, 75, 0, 458763, 75, 0, 458764, 75, 0, 589823, 75, 0, 524288, 75, 0, 524289, 75, 0, 524290, 75, 0, 524291, 74, 0, 524292, 74, 0, 524293, 74, 0, 524294, 74, 0, 524295, 74, 0, 524296, 74, 0, 524297, 74, 0, 524298, 74, 0, 524299, 74, 0, 524300, 74, 0, 655359, 74, 0, 589824, 74, 0, 589825, 74, 0, 589826, 74, 0, 589827, 74, 0, 589828, 74, 0, 589829, 74, 0, 589830, 74, 0, 589831, 74, 0, 589832, 74, 0, 589833, 74, 0, 589834, 74, 0, 589835, 74, 0, 589836, 74, 0, 720895, 74, 0, 655360, 74, 0, 655361, 74, 0, 655362, 74, 0, 655363, 75, 0, 655364, 74, 0, 655365, 74, 0, 655366, 74, 0, 655367, 74, 0, 655368, 74, 0, 655369, 74, 0, 655370, 74, 0, 655371, 74, 0, 655372, 74, 0, 786431, 74, 0, 720896, 74, 0, 720897, 74, 0, 720898, 74, 0, 720899, 74, 0, 720900, 74, 0, 720901, 74, 0, 720902, 74, 0, 720903, 74, 0, 720904, 74, 0, 720905, 74, 0, 720906, 74, 0, 720907, 74, 0, 720908, 74, 0, 851967, 74, 0, 786432, 74, 0, 786433, 74, 0, 786434, 74, 0, 786435, 74, 0, 786436, 74, 0, 786437, 74, 0, 786438, 74, 0, 786439, 74, 0, 786440, 74, 0, 786441, 74, 0, 786442, 74, 0, 786443, 74, 0, 786444, 74, 0, 917503, 74, 0, 851968, 74, 0, 851969, 74, 0, 851970, 74, 0, 851971, 74, 0, 851972, 74, 0, 851973, 74, 0, 851974, 74, 0, 851975, 74, 0, 851976, 74, 0, 851977, 74, 0, 851978, 74, 0, 851979, 74, 0, 851980, 74, 0, 983039, 74, 0, 917504, 74, 0, 917505, 74, 0, 917506, 74, 0, 917507, 74, 0, 917508, 74, 0, 917509, 74, 0, 917510, 74, 0, 917511, 74, 0, 917512, 74, 0, 917513, 74, 0, 917514, 74, 0, 917515, 74, 0, 917516, 74, 0, 1048575, 74, 0, 983040, 74, 0, 983041, 74, 0, 983042, 74, 0, 983043, 74, 0, 983044, 74, 0, 983045, 74, 0, 983046, 74, 0, 983047, 74, 0, 983048, 74, 0, 983049, 74, 0, 983050, 74, 0, 983051, 74, 0, 983052, 74, 0, 1114111, 74, 0, 1048576, 74, 0, 1048577, 74, 0, 1048578, 74, 0, 1048579, 74, 0, 1048580, 74, 0, 1048581, 74, 0, 1048582, 74, 0, 1048583, 74, 0, 1048584, 74, 0, 1048585, 74, 0, 1048586, 74, 0, 1048587, 74, 0, 1048588, 74, 0, 1179647, 74, 0, 1114112, 74, 0, 1114113, 74, 0, 1114114, 74, 0, 1114115, 74, 0, 1114116, 74, 0, 1114117, 74, 0, 1114118, 74, 0, 1114119, 74, 0, 1114120, 74, 0, 1114121, 74, 0, 1114122, 74, 0, 1114123, 74, 0, 1114124, 74, 0, 1245183, 74, 0, 1179648, 74, 0, 1179649, 74, 0, 1179650, 74, 0, 1179651, 74, 0, 1179652, 74, 0, 1179653, 74, 0, 1179654, 74, 0, 1179655, 74, 0, 1179656, 74, 0, 1179657, 74, 0, 1179658, 74, 0, 1179659, 74, 0, 1179660, 74, 0 )

[node name="TileMap" type="TileMap" parent="PlayerBoardUI/NonPlayerBackground"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 393215, 119, 0, 327680, 121, 0, 327681, 121, 0, 327682, 121, 0, 327683, 121, 0, 327684, 121, 0, 327685, 121, 0, 327686, 121, 0, 327687, 121, 0, 327688, 121, 0, 327689, 121, 0, 327690, 121, 0, 327691, 121, 0, 327692, 122, 0, 458751, 79, 0, 393228, 79, 0, 524287, 79, 0, 458764, 79, 0, 589823, 79, 0, 524300, 79, 0, 655359, 79, 0, 589836, 79, 0, 720895, 79, 0, 655372, 79, 0, 786431, 79, 0, 720908, 79, 0, 851967, 79, 0, 786444, 79, 0, 917503, 79, 0, 851980, 79, 0, 983039, 79, 0, 917516, 79, 0, 1048575, 79, 0, 983052, 79, 0, 1114111, 79, 0, 1048588, 79, 0, 1179647, 79, 0, 1114124, 79, 0, 1245183, 125, 0, 1179648, 121, 0, 1179649, 121, 0, 1179650, 121, 0, 1179651, 121, 0, 1179652, 121, 0, 1179653, 121, 0, 1179654, 121, 0, 1179655, 121, 0, 1179656, 121, 0, 1179657, 121, 0, 1179658, 121, 0, 1179659, 121, 0, 1179660, 124, 0 )

[node name="Deck" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Heap" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Hand" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Matrix" type="Node" parent="."]
script = ExtResource( 8 )
